--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ Copyright 2014 git training
 More copyright training
 -->
 <head>
-	<title>An example website</title>
+	<title>An Great website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,11 @@ More copyright training
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some content 1
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; GIt training 2014</p>
 	</footer>
 </body>
 </html>
