--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <!--
 Copyright 2014 git training
-More copyright training
+More copyright training.
+Adding changes before rebasing conflicts
 -->
 <head>
 	<title>An awesome websitee</title>
