--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,9 @@
 <!--
 Copyright 2014 git training
 More copyright training.
-Adding master branch conlfict changes
+Adding changes before rebasing conflicts
+
+changes form big trouble
 -->
 <head>
 	<title>An awesome websitee</title>
@@ -19,7 +21,8 @@ Adding master branch conlfict changes
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			To make more conflicts making changes to master branch
+			Changes from big trouble
+		</p>
 	</main>
 	<footer class="container">
 		<p>&copy; Company 2014</p>
