--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!--
 Copyright 2014 git training
 More copyright training.
-Adding changes before rebasing conflicts
+Adding master branch conlfict changes
 -->
 <head>
 	<title>An awesome websitee</title>
@@ -19,8 +19,7 @@ Adding changes before rebasing conflicts
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			This is awesome website content
-		</p>
+			To make more conflicts making changes to master branch
 	</main>
 	<footer class="container">
 		<p>&copy; Company 2014</p>
