adding changes are conflicts are resolved

--- a/simple.html
+++ b/simple.html
@@ -7,7 +7,7 @@ Adding changes before rebasing conflicts
 changes form big trouble
 -->
 <head>
-	<title>An awesome websitee</title>
+	<title>Again more trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
