--- a/simple.html
+++ b/simple.html
@@ -25,7 +25,7 @@ changes form big trouble
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014. Changes in origin master</p>
+		<p>&copy; Company 2014 .Making changes to copyright master</p>
 	</footer>
 </body>
 </html>
